# mlir_rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md
crates/build_common/: Cargo.toml
crates/build_common/src/: lib.rs
crates/circt/: Cargo.toml
crates/circt/src/: lib.rs
crates/circt_sys/: Cargo.toml  build.rs  wrapper.h
crates/circt_sys/src/: lib.rs
crates/mlir/: Cargo.toml
crates/mlir/src/: attr.rs  attribute.rs  cursor.rs  lib.rs  ty.rs
crates/mlir_sys/: Cargo.toml  build.rs  wrapper.h
doc/: safety.md
