[package]
name = "circt_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlir_sys = { path = "../mlir_sys" }

[build-dependencies]
bindgen = "0.63.0"
build_common = { path = "../build_common" }
cc = { version = "1.0", features = ["parallel"] }
